2008-10-08  Murray Cumming  <murrayc@murrayc.com>

	* Makefile.am:
	* configure.in:
	* tests/Makefile.am:
	* tests/child_properties/: Added a test
	for get_child_property().

0.11.0:

2008-09-13  Murray Cumming  <murrayc@murrayc.com>

	* examples/custom_item/exampleitem.cc:
	* examples/custom_item/examplewindow.cc:
	* examples/custom_item/main.cc:
	* examples/demo/main.cc:
	* examples/demo/window.cc:
	* examples/demo/window.h:
	* examples/drag_to_canvas/examplewindow.cc:
	* examples/drag_to_canvas/main.cc:
	* examples/moving_shapes/main.cc:
	* examples/moving_shapes/window.cc:
	* examples/simple/examplewindow.cc:
	* examples/simple/main.cc:
	* examples/table/examplewindow.cc:
	* examples/table/main.cc:
	* examples/tablemodel/examplewindow.cc:
	* examples/tablemodel/main.cc: Added missing copyright 
	comment blocks.

2008-07-27  Murray Cumming  <murrayc@murrayc.com>

	* examples/coordinates/window.h:
	* examples/custom_item/Makefile.am:
	* examples/custom_item/exampleitem.cc:
	* examples/custom_item/exampleitem.h:
	* examples/custom_item/examplewindow.cc:
	* examples/custom_item/examplewindow.h:
	* examples/drag_to_canvas/examplewindow.h:
	* examples/moving_shapes/window.h:
	* examples/simple/examplewindow.h:
	* examples/table/examplewindow.h:
	* examples/tablemodel/examplewindow.h:
	* examples/text/window.h: Added header guards.

	* configure.in:
	* examples/Makefile.am:
	* examples/custom_item/: New unfinished unworking 
	example of a custom item doing its own drawing.

0.10.0: Skipped.

0.9.0:

2008-07-27  Murray Cumming  <murrayc@murrayc.com>

	* goocanvas/src/libgoocanvas_docs.xml: Regenerated.
	* goocanvas/src/libgoocanvas_enums.defs: Regenerated.
	* goocanvas/src/libgoocanvas_signals.defs: Corrected the Event signals by 
	hand.
	* goocanvas/src/libgoocanvas_signals.defs.patch: Created this patch 
	to do the same in future.

2008-07-27  Murray Cumming  <murrayc@murrayc.com>

	* goocanvas/src/libgoocanvas_signals.defs: Regenerated.
