@@ -65,10 +65,16 @@ public:
   _WRAP_METHOD(void add_child(const Glib::RefPtr<Item>& child, int pos), goo_canvas_item_add_child)
   void add_child(const Glib::RefPtr<Item>& child);
 
-  _WRAP_METHOD(void get_child_property(const Glib::RefPtr<Item>& child, const Glib::ustring& property_name, Glib::ValueBase& value) const, goo_canvas_item_get_child_property)
-  _WRAP_METHOD(void set_child_property(const Glib::RefPtr<Item>& child, const Glib::ustring& property_name, const Glib::ValueBase& value), goo_canvas_item_set_child_property)
+  _WRAP_METHOD(void get_child_property_value(const Glib::RefPtr<Item>& child, const Glib::ustring& property_name, Glib::ValueBase& value) const, goo_canvas_item_get_child_property)
+  _WRAP_METHOD(void set_child_property_value(const Glib::RefPtr<Item>& child, const Glib::ustring& property_name, const Glib::ValueBase& value), goo_canvas_item_set_child_property)
   _IGNORE(goo_canvas_item_get_child_properties_valist)
   _IGNORE(goo_canvas_item_set_child_properties_valist)
+
+  template <class PropertyType>
+  void get_child_property(const Glib::RefPtr<Item>& child, const Glib::ustring& the_property_name, PropertyType& value) const;
+
+  template <class PropertyType>
+  void set_child_property(const Glib::RefPtr<Item>& child, const Glib::ustring& the_property_name, const PropertyType& value);
 
   _WRAP_METHOD(void move_child(int old_position, int new_position), goo_canvas_item_move_child)
   _WRAP_METHOD(void remove_child(int child_num), goo_canvas_item_remove_child)
@@ -233,19 +239,27 @@ protected:
 
 #ifndef DOXYGEN_SHOULD_SKIP_THIS
 
-/* TODO:
-//The parameter name is "the_property_name" to avoid a warning because there is a method with the "property_name" name.
 template <class PropertyType>
-void Item::get_child_property(const Glib::ustring& the_property_name, PropertyType& value) const
+void Item::get_child_property(const Glib::RefPtr<Item>& child, const Glib::ustring& the_property_name, PropertyType& value) const
 {
   Glib::Value<PropertyType> property_value;
   property_value.init(Glib::Value<PropertyType>::value_type());
 
-  this->get_child_property_value(the_property_name, property_value);
+  this->get_child_property_value(child, the_property_name, property_value);
 
   value = property_value.get();
 }
-*/
+
+template <class PropertyType>
+void Item::set_child_property(const Glib::RefPtr<Item>& child, const Glib::ustring& the_property_name, const PropertyType& value)
+{
+  Glib::Value<PropertyType> property_value;
+  property_value.init(Glib::Value<PropertyType>::value_type());
+  property_value.set(value);
+
+  this->set_child_property_value(child, the_property_name, property_value);
+}
+
 
 #endif /* DOXYGEN_SHOULD_SKIP_THIS */
 
